# punchcard

./: .gitignore  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
fixtures/: hello.cbl  inventory_lookup.cbl  payroll.cbl  report_generation.cbl  with_copy.cbl
fixtures/copybooks/: CUSTOMER.cpy
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
frontend/src/components/: ParagraphDetail.tsx  ParagraphList.tsx  UploadForm.tsx
punchcard/: __init__.py
punchcard/backend/: __init__.py  main.py
punchcard/backend/api/: __init__.py  routes.py  sessions.py
punchcard/backend/llm/: __init__.py  anthropic_client.py  client.py  confidence.py  prompts.py
punchcard/backend/parser/: __init__.py  cobol_listener.py  complexity.py  ir.py  preprocessor.py
punchcard/backend/parser/_generated/: Cobol85Lexer.py  Cobol85Listener.py  Cobol85Parser.py  Cobol85PreprocessorLexer.py  Cobol85PreprocessorListener.py  Cobol85PreprocessorParser.py  __init__.py
punchcard/backend/parser/grammar/: README.md
punchcard/backend/review/: __init__.py  confidence.py  diff.py  export.py  session.py
punchcard/tui/: __init__.py  app.py
scripts/: regen_parser.sh
tests/: test_api_routes.py  test_complexity.py  test_confidence.py  test_fixtures.py  test_fixtures_and_review.py  test_line_parser.py  test_llm_client.py  test_preprocessor.py  test_review_diff.py  test_rewrite_session.py
