[project]
name = "punchcard"
version = "0.1.0"
description = "A small, explainable COBOL modernization workbench. Nu, start simple and iterate."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Punchcard contributors" }]
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115.0",
    "python-multipart>=0.0.17",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.6.0",
    "anthropic>=0.39.0",
    "antlr4-python3-runtime>=4.13.2",
    "rich>=13.9.0",
    "textual>=0.83.0",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "respx>=0.21.0",
    "ruff>=0.7.0",
]

[project.scripts]
punchcard = "punchcard.backend.main:main"
punchcard-tui = "punchcard.tui.app:main"
punchcard-web = "punchcard.backend.main:serve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["punchcard/backend/parser/_generated"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom calls these in argument defaults on purpose.
extend-immutable-calls = ["fastapi.Depends", "fastapi.File"]
